1998-12-08  Mario Weilguni <mweilguni@kde.org>

	* added Denmark rules
	* added Luxembourg rules
	* commented out the no-longer need CHAP_* functions
	* removed the old/never used setup program
	* cleaned up accounting (set umask, no chown/chmod)
	* cleaned up PPP log (set umask, no SUID check)

1998-12-05  Harri Porten  <porten@kde.org>

	* connect.cpp: killpppd() and stop if_timeout_timer in cancelbutton()
	* main.cpp: ignore SIGCHLDs in shutDown()
	* main.cpp: interface timeout error wasn't displayed anymore
	* modem.cpp: check for possible existance of stale lockfile before
	trying it to open via Requester::rq->openLockFile(). The resulting
	error message on failure was too confusing.
	* main.cpp: ignore SIGHUPs in child process

1998-12-04  Harri Porten  <porten@kde.org>

	* requester.cpp: disable alarm() for now, silence some debug messages

1998-12-01  Harri Porten  <porten@kde.org>

	* main.cpp: notify user about death of helper process and abort

1998-11-28  Harri Porten  <porten@kde.org>

	* main.cpp: restored accidentally deleted line (setPassword())
	* connect.cpp: suppress warnings from QStrList

1998-11-26  Harri Porten  <porten@kde.org>

	* included errno.h in opener.cpp and modified CMSG_DATA()'s
	argument (as suggested by Andreas Pour).
	* had to revert to SOCK_DGRAM since I keep getting failed
	assertions. Using a stream seems to require some attention in
	terms of ensuring that the correct length is received.

1998-11-26  Mario Weilguni <mweilguni@kde.org>
	
	* added missing rules for Switzerland, and added kppp.sh
	* replace SOCK_DGRAM by SOCK_STREAM, and hope that it works

1998-11-26  Harri Porten  <porten@kde.org>

	* requester.cpp: made the ifdef's for cmsg_data more portable
	* requester.cpp, opener.cpp: include sys/uio.h to define struct
	iovec. As far as I can see this should work for systems with and
	without glibc. If it doesn't, please mail me directly.
 
1998-11-25  Mario Weilguni <mweilguni@kde.org>
